<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface"
    tools:context=".view.home.MainActivity">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="?attr/colorOnPrimary"
            app:title="@string/scan_cancer" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_corners"
        android:contentDescription="@string/image_preview"
        app:layout_constraintBottom_toTopOf="@+id/btnGalerry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_place_holder" />

    <Button
        android:id="@+id/btnGalerry"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/gallery"
        app:layout_constraintBottom_toTopOf="@+id/btnNews"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNews"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/news"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAnaliize"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/analyze"
        app:layout_constraintBottom_toTopOf="@+id/btnHistory"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnHistory"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>